--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
    </head>
    
-   <body onload="init016();stat2016();">
+   <body onload="init016();">
       <main>
       
       <section>
