--- a/Gantt_chart (1).html
+++ b/Gantt_chart (1).html
@@ -76,7 +76,7 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Zevent</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
+                                   <div class="intitule1">Viewers max</div>
                                    <div class="intitule2">Dons</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
@@ -108,7 +108,7 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">SpeeDons</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
+                                   <div class="intitule1">Viewers max</div>
                                    <div class="intitule2">Dons</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
@@ -135,7 +135,7 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">72H Pour la Palestine</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
+                                   <div class="intitule1">Viewers max</div>
                                    <div class="intitule2">Dons</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
@@ -161,8 +161,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Zlan</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">50 000</div>
@@ -190,8 +190,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Lyon Esport</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">24 900</div>
@@ -220,8 +220,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">AS Monaco</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">6 351</div>
@@ -248,8 +248,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">E3</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">151 410</div>
@@ -275,8 +275,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">GamesCom</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">140 543</div>
@@ -302,8 +302,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">GamesAwards</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">3 124 470</div>
@@ -331,8 +331,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">RPZ</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">54 000 000</div>
@@ -360,8 +360,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">L’échapée</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">551 310</div>
@@ -390,8 +390,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">FC Silmi</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">100 000</div>
@@ -419,8 +419,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">OTP</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">290 837</div>
@@ -446,8 +446,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">OpenWorld</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">57 000 </div>
@@ -474,8 +474,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">OmTV</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">53 966 </div>
@@ -501,8 +501,8 @@
                               <header class="modal-header">
                                    <h2 class="modal-titre">Ligue 1</h2>
                                    <div class="container">
-                                        <div class="intitule1">Viwers max</div>
-                                        <div class="intitule2">Viwers moyen</div>
+                                        <div class="intitule1">Viewers max</div>
+                                        <div class="intitule2">Viewers moyen</div>
                                         <div class="intitule3">Durée</div>
                                         <div class="intitule4">Streamers</div>
                                         <div class="chiffre1">14 725 </div>
@@ -528,8 +528,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Lando Norris</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">104 229</div>
@@ -552,8 +552,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Neymar</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">106 000</div>
@@ -576,8 +576,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Charles Leclerc</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">67 383</div>
@@ -601,8 +601,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Gaël Monfils</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="intitule4">Streamers</div>
                                    <div class="chiffre1">20 134</div>
@@ -625,8 +625,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">DTF</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">60 000</div>
                                    <div class="chiffre2">/</div>
@@ -648,8 +648,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Neko Ligth Orchestra</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">7 565</div>
                                    <div class="chiffre2">233</div>
@@ -671,8 +671,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Metallica</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">1,2 M</div>
                                    <div class="chiffre2">/</div>
@@ -694,8 +694,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">Samuel Etienne</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">100 000</div>
                                    <div class="chiffre2">11 000</div>
@@ -717,8 +717,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">BFMTV</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">19 251</div>
                                    <div class="chiffre2">1 353</div>
@@ -741,8 +741,8 @@
                          <header class="modal-header">
                               <h2 class="modal-titre">JL Mélanchon</h2>
                               <div class="container">
-                                   <div class="intitule1">Viwers max</div>
-                                   <div class="intitule2">Viwers moyen</div>
+                                   <div class="intitule1">Viewers max</div>
+                                   <div class="intitule2">Viewers moyen</div>
                                    <div class="intitule3">Durée</div>
                                    <div class="chiffre1">22 773</div>
                                    <div class="chiffre2">490</div>
