--- a/Gantt_chart (1).html
+++ b/Gantt_chart (1).html
@@ -705,7 +705,7 @@
                          </header>
                          <div class="modal-descrption">
 
-                              <p class="modal-texte">En créant sa chaîne sur la plate-forme de vidéos Twitch, Samuel Étienne en a fait le lieu incontournable de ce début d’année, au point d’accueillir chez lui l'ancien président de la République François Hollande ( avec 100k viwers) et le Premier ministre Jean Castex (avec 85k viwers).</p>
+                              <p class="modal-texte">En créant sa chaîne sur la plate-forme de vidéos Twitch, Samuel Étienne en a fait le lieu incontournable de ce début d’année, au point d’accueillir chez lui l'ancien président de la République François Hollande ( avec 100k viewers) et le Premier ministre Jean Castex (avec 85k viewers).</p>
                          </div>
                     </section>
                </div>
